fetcheddataDev/objects/Hospitals__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Name__c</fullName>
        <label>Hospital Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Hospitals</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Hospitals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hospitals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>